--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="background-color:black;">
     <nav class="navbar navbar-expand-lg navbar-dark" id="mynav">
         <div class="container">
-            <img src="./EyeOnic/EYEONIC LOGO/EYEONIC LOGO.png" d-block style="width: 85px;height:75px ;" alt="">
+            <img src="EYEONIC LOGO.png" d-block style="width: 85px;height:75px ;" alt="">
             <a class="navbar-brand ml-2" href="./Home.html">EYEONIC</a>
             <ul class="navbar-nav ml-auto">
                 <div class="navbar navbar-md-collapse">
